--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -115,7 +115,7 @@ jobs:
         with:
           msystem: MINGW64
           update: true
-          install: git pkgconf mingw-w64-x86_64-toolchain mingw-w64-x86_64-cmake
+          install: git pkgconf mingw-w64-x86_64-toolchain mingw-w64-x86_64-cmake mingw-w64-x86_64-mesa
 
       - name: Install Dependencies (macOS)
         if: ${{ runner.os == 'macOS' }}
