Follow the moderngl instructions
- https://moderngl.readthedocs.io/en/5.8.2/install/installation.html#using-with-mesa-3d-on-windows

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -244,4 +244,6 @@ jobs:
         if: ${{ inputs.test-suite && runner.os == 'Windows' }}
         working-directory: "${{ env.BUILD_DIR }}"
         shell: msys2 {0}
+        env:
+          GLCONTEXT_WIN_LIBGL: "C:\msys64\mingw64\bin\opengl32.dll"
         run: ctest --extra-verbose --exclude-regex example --output-on-failure
