--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -245,5 +245,5 @@ jobs:
         working-directory: "${{ env.BUILD_DIR }}"
         shell: msys2 {0}
         env:
-          GLCONTEXT_WIN_LIBGL: "C:\msys64\mingw64\bin\opengl32.dll"
+          GLCONTEXT_WIN_LIBGL: "C:/msys64/mingw64/bin/opengl32.dll"
         run: ctest --extra-verbose --exclude-regex example --output-on-failure
