Log more environment info

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -247,5 +247,6 @@ jobs:
         env:
           GLCONTEXT_WIN_LIBGL: "C:/msys64/mingw64/bin/opengl32.dll"
         run: |
-          ls -hal $Python3_ROOT_DIR
+          ls -hal "$Python3_ROOT_DIR/DLLs" "$Python3_ROOT_DIR/libs" "$Python3_ROOT_DIR/Lib" "$Python3_ROOT_DIR/Scripts"
+          echo $PATH
           ctest --extra-verbose --exclude-regex example --output-on-failure
