--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -115,7 +115,7 @@ jobs:
         with:
           msystem: MINGW64
           update: true
-          install: git pkgconf mingw-w64-x86_64-toolchain mingw-w64-x86_64-cmake mingw-w64-x86_64-mesa
+          install: git pkgconf mingw-w64-x86_64-toolchain mingw-w64-x86_64-cmake mingw-w64-x86_64-mesa mingw-w64-x86_64-python
 
       - name: Install Dependencies (macOS)
         if: ${{ runner.os == 'macOS' }}
@@ -159,7 +159,6 @@ jobs:
         if: ${{ inputs.test-suite }}
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
           cache: 'pip'
           cache-dependency-path: "${{ github.workspace }}/test/requirements.txt"
 
