--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -159,6 +159,7 @@ jobs:
         if: ${{ inputs.test-suite }}
         uses: actions/setup-python@v5
         with:
+          python-version: '3.12'
           cache: 'pip'
           cache-dependency-path: "${{ github.workspace }}/test/requirements.txt"
 
