--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -245,8 +245,7 @@ jobs:
         working-directory: "${{ env.BUILD_DIR }}"
         shell: msys2 {0}
         env:
-          GLCONTEXT_WIN_LIBGL: "C:/mingw64/bin/opengl32.dll"
+          GLCONTEXT_WIN_LIBGL: "D:/a/_temp/msys64/mingw64/bin/opengl32.dll"
         run: |
-          export PATH="/mingw64/bin:$PATH"
-          stat "$GLCONTEXT_WIN_LIBGL"
+          env | sort
           ctest --extra-verbose --exclude-regex example --output-on-failure
