Don't write extra-verbose test output

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -247,4 +247,4 @@ jobs:
         run: |
           export GLCONTEXT_WIN_LIBGL="$RUNNER_TEMP/msys64/mingw64/bin/opengl32.dll"
           # Needed by glcontext (which is a dependency for libretro.py's OpenGL driver)
-          ctest --extra-verbose --exclude-regex example --output-on-failure
+          ctest --exclude-regex example --output-on-failure
