Try D3D12_DEBUG on the Windows runner
- Source: https://docs.mesa3d.org/drivers/d3d12.html

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -249,6 +249,7 @@ jobs:
         env:
           PYTHONUNBUFFERED: 1
           MESA_DEBUG: 1
+          D3D12_DEBUG: verbose,debuglayer,gpuvalidator
         run: |
           export GLCONTEXT_WIN_LIBGL="$RUNNER_TEMP/msys64/mingw64/bin/opengl32.dll"
           # Needed by glcontext (which is a dependency for libretro.py's OpenGL driver)
