--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -251,4 +251,5 @@ jobs:
           MESA_DEBUG: 1
           D3D12_DEBUG: verbose,debuglayer,gpuvalidator
         run: |
+          ls C:/Windows/System32/opengl32.dll
           ctest --exclude-regex example --output-on-failure
