--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -250,6 +250,6 @@ jobs:
           PYTHONUNBUFFERED: 1
           MESA_DEBUG: 1
           D3D12_DEBUG: verbose,debuglayer,gpuvalidator
+          GLCONTEXT_WIN_LIBGL: "C:/Windows/System32/opengl32.dll"
         run: |
-          ls C:/Windows/System32/opengl32.dll
           ctest --exclude-regex example --output-on-failure
