--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -127,8 +127,7 @@ jobs:
         if: ${{ runner.os == 'Windows' }}
         shell: powershell
         run: |
-          echo $Env:PATH
-          winget install 9NQPSL29BFFF --disable-interactivity --accept-source-agreements
+          winget install 9NQPSL29BFFF --disable-interactivity --accept-source-agreements --accept-package-agreements
 
       - name: Install Dependencies (macOS)
         if: ${{ runner.os == 'macOS' }}
