Whoops, forgot to actually run the tests

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -248,6 +248,13 @@ jobs:
           if-no-files-found: error
           path: "${{ env.DIST_DIR }}"
 
+      - name: Run Test Suite (macOS)
+        if: ${{ inputs.test-suite && runner.os == 'macOS' }}
+        working-directory: "${{ env.BUILD_DIR }}"
+        env:
+          PYTHONUNBUFFERED: 1
+        run: ctest --exclude-regex example --output-on-failure
+
       - name: Run Test Suite (Linux)
         if: ${{ inputs.test-suite && runner.os == 'Linux' }}
         working-directory: "${{ env.BUILD_DIR }}"
