--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -1,6 +1,3 @@
-# melonDS DS doesn't support OpenGL on macOS,
-# so there's no need to install OpenGL dependencies
-libretro.py==0.1.11
-libretro.py[opengl]==0.1.11 ; sys_platform != "darwin"
+libretro.py[opengl]==0.1.11
 Pillow==10.3.0
 more-itertools==10.2.* ; python_version < '3.12'
