Add the test in `Screen.cmake`

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -288,5 +288,6 @@ include(cmake/Booting.cmake)
 include(cmake/Errors.cmake)
 include(cmake/Firmware.cmake)
 include(cmake/Reset.cmake)
+include(cmake/Screen.cmake)
 include(cmake/TestHomebrewSDCards.cmake)
 include(cmake/Video.cmake)
