Build the contents of the `net` target explicitly
- Like I did before adding the `net` target upstream
- There are some CMake configure errors I can't be bothered to fix right now

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -161,12 +161,13 @@ if (HAVE_NETWORKING)
         platform/lan.cpp
     )
 
-    target_link_libraries(melondsds_libretro PUBLIC net-utils)
-
     target_include_directories(melondsds_libretro SYSTEM PRIVATE "${melonDS_SOURCE_DIR}/src/net")
 
     if (HAVE_NETWORKING_DIRECT_MODE)
-        # TODO: Support this conditionally
+        target_sources(melondsds_libretro PRIVATE
+            ${melonDS_SOURCE_DIR}/src/net/Net_PCap.cpp
+            ${melonDS_SOURCE_DIR}/src/net/Net_PCap.h
+        )
     endif()
 endif ()
 
