--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -104,8 +104,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install GCC Problem Matcher
-        uses: root-project/gcc-problem-matcher-improved@9d83f12b27a78210f0485fb188e08d94fa807a6d
-        if: ${{ runner.os != 'Windows' }} # See https://github.com/root-project/gcc-problem-matcher-improved/issues/3
+        uses: root-project/gcc-problem-matcher-improved@f570674bcaf59d17ec0e6ae3ee0d03f8d68c1989
+        #if: ${{ runner.os != 'Windows' }} # See https://github.com/root-project/gcc-problem-matcher-improved/issues/3
         with:
           build-directory: ${{ env.BUILD_DIR }}
 
@@ -129,7 +129,7 @@ jobs:
         # Skip this step on act due to https://github.com/nektos/act/issues/1849
       - name: Install Dependencies (Linux x86_64/Android)
         if: ${{ !env.ACT && runner.os == 'Linux' && !contains(inputs.target, 'aarch64') }}
-        uses: awalsh128/cache-apt-pkgs-action@6460a33c29e99ddc3c9f61ebd04653105b260906
+        uses: awalsh128/cache-apt-pkgs-action@v1.4.2
         with:
           packages: ccache cmake libepoxy-dev libopengl0 libopengl-dev ninja-build p7zip-full x11-xserver-utils xdg-utils xvfb
           version: 1.2
@@ -147,13 +147,13 @@ jobs:
 
       - name: Install Dependencies (Linux aarch64)
         if: ${{ runner.os == 'Linux' && contains(inputs.target, 'aarch64') }}
-        uses: awalsh128/cache-apt-pkgs-action@6460a33c29e99ddc3c9f61ebd04653105b260906
+        uses: awalsh128/cache-apt-pkgs-action@v1.4.2
         with:
           packages: cmake ninja-build libepoxy-dev:arm64 libopengl0:arm64 libopengl-dev:arm64 ccache
           version: 1.2
 
       - name: Install CCache
-        uses: hendrikmuhs/ccache-action@v1.2.11
+        uses: hendrikmuhs/ccache-action@v1.2.14
         with:
           key: ${{ inputs.target }}-${{ matrix.build-type }}
           variant: ${{ runner.os == 'Windows' && 'sccache' || 'ccache' }} # Equivalent to (runner.os == 'Windows') ? 'sccache' : 'ccache'
@@ -233,7 +233,7 @@ jobs:
           cp -f "${{ env.BUILD_DIR }}/melondsds-LICENSE.txt" "$CORES_PATH"
 
       - name: Upload Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: "${{ inputs.archive-name }}-${{ matrix.build-type }}"
           if-no-files-found: error
