Add license for the small public-domain libraries that melonDS uses
- Why not?

--- a/cmake/melondsds-LICENSE.txt.in
+++ b/cmake/melondsds-LICENSE.txt.in
@@ -251,6 +251,11 @@ OTHER DEALINGS IN THE FONT SOFTWARE.
 
 ${PNTR_LICENSE}
 
+# SHA-1 in C ###########################################################################################################
+
+By Steve Reid <steve@edmweb.com>
+100% Public Domain
+
 # Slirp ################################################################################################################
 
 ${SLIRP_LICENSE}
@@ -262,6 +267,10 @@ ${SPAN_LITE_LICENSE}
 # teakra ###############################################################################################################
 
 ${TEAKRA_LICENSE}
+
+# Tiny AES in C ########################################################################################################
+
+${TINY_AES_LICENSE}
 
 # xxhash ###############################################################################################################
 
