--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -95,6 +95,7 @@ jobs:
         build-type:
           - Debug
           - Release
+          - RelWithDebInfo
     runs-on: ${{ inputs.runs-on }}
     defaults:
       run:
@@ -194,6 +195,7 @@ jobs:
         run: |
           cmake "${{ github.workspace }}" \
             -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" \
+            -DTRACY_ENABLE="${{ matrix.build-type == 'RelWithDebInfo' && 'ON' || 'OFF' }}" \
             ${{ inputs.cmake-args }}
 
       - name: Configure (With Test Suite)
@@ -202,6 +204,7 @@ jobs:
         run: |
           cmake "${{ github.workspace }}" \
             -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" \
+            -DTRACY_ENABLE="${{ matrix.build-type == 'RelWithDebInfo' && 'ON' || 'OFF' }}" \
             -DBUILD_TESTING=ON \
             -DARM7_BIOS="${{ env.TESTFILE_DIR }}/${{ secrets.ARM7_BIOS }}" \
             -DARM9_BIOS="${{ env.TESTFILE_DIR }}/${{ secrets.ARM9_BIOS }}" \
