--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,6 +6,7 @@ on:
     types: [completed]
     branches:
       - main
+      - dev
 jobs:
   check-release-version:
     name: Check Release Version
