Temporarily don't filter release.yaml's run by branch

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,9 +4,9 @@ on:
     # Run this workflow right after the build succeeds and test pass on the main branch
     workflows: ["Build Artifacts"]
     types: [completed]
-    branches:
-      - main
-      - dev
+#    branches:
+#      - main
+#      - dev
 jobs:
   check-release-version:
     name: Check Release Version
