--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,9 +4,8 @@ on:
     # Run this workflow right after the build succeeds and test pass on the main branch
     workflows: ["Build Artifacts"]
     types: [completed]
-#    branches:
-#      - main
-#      - dev
+    branches:
+      - main
 jobs:
   check-release-version:
     name: Check Release Version
