--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -95,7 +95,7 @@ jobs:
         build-type:
           - Debug
           - Release
-          #- RelWithDebInfo
+          - RelWithDebInfo
     runs-on: ${{ inputs.runs-on }}
     defaults:
       run:
