Set a different version string for RelWithDebInfo builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,12 +87,12 @@ include(cmake/ConfigureDependencies.cmake)
 set(MELONDSDS_NAME "${CMAKE_PROJECT_NAME}")
 if ("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
     set(MELONDSDS_VERSION "${CMAKE_PROJECT_VERSION}")
-else()
-    if (GIT_STATE)
-        set(MELONDSDS_VERSION "${GIT_STATE}-${CMAKE_BUILD_TYPE}-upstream-${MELONDS_REPOSITORY_TAG}")
-    else ()
-        set(MELONDSDS_VERSION "v${CMAKE_PROJECT_VERSION}-nogit-${CMAKE_BUILD_TYPE}-upstream-${MELONDS_REPOSITORY_TAG}")
-    endif()
+elseif ("${CMAKE_BUILD_TYPE}" STREQUAL "RelWithDebInfo")
+    set(MELONDSDS_VERSION "${CMAKE_PROJECT_VERSION} (RelWithDebInfo)")
+elseif (GIT_STATE)
+    set(MELONDSDS_VERSION "${GIT_STATE}-${CMAKE_BUILD_TYPE}-upstream-${MELONDS_REPOSITORY_TAG}")
+else ()
+    set(MELONDSDS_VERSION "v${CMAKE_PROJECT_VERSION}-nogit-${CMAKE_BUILD_TYPE}-upstream-${MELONDS_REPOSITORY_TAG}")
 endif()
 
 message(STATUS "${MELONDSDS_NAME} version string: '${MELONDSDS_VERSION}'")
