--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,6 +6,9 @@ on:
     types: [completed]
     branches:
       - main
+  workflow_dispatch:
+    # Allow manual triggering of this workflow
+
 permissions:
   contents: read
 jobs:
