--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,6 +47,9 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v4
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          # Token required to download artifacts from other workflows in this run
+          run-id: '${{ github.run_id }}'
           path: artifact
 
       - name: Zip Release Artifacts
