--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -70,7 +70,7 @@ jobs:
         shell: bash
         working-directory: artifact
         run: |
-          for file in melondsds_libretro-*-Release melondsds_libretro-*-RelWithDebInfo; do
+          for file in melondsds_libretro-*-{Debug,Release,RelWithDebInfo}; do
             zip -r "${file}.zip" "$file"
           done
 
