Move `input.cpp` to a new directory
- Other input-related state will go in there soon

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -48,8 +48,8 @@ add_library(melondsds_libretro ${LIBRARY_TYPE}
     glsym_private.h
     info.cpp
     info.hpp
-    input.cpp
-    input.hpp
+    input/input.cpp
+    input/input.hpp
     libretro.cpp
     libretro.hpp
     math.hpp
